Fix: Modify z-index bug

--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -1,6 +1,6 @@
 .menu-container {
   position: fixed;
-  z-index: 5;
+  z-index: 10;
   inset: 0;
   background-color: var(--matcha-bg);
   padding-inline: 12px;
