--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -692,7 +692,7 @@ button {
 }
 .menu-container {
   position: fixed;
-  z-index: 5;
+  z-index: 10;
   inset: 0;
   background-color: var(--matcha-bg);
   padding-inline: 12px;
